Make library module dynamic feature module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dynamicFeatures = [":dfm_library"]
 }
 
 dependencies {
-    implementation project(":dfm_library")
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
